--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,22 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
 
-<% if user_signed_in? %>
-  <ul>
-    <li><%= link_to 'Account', edit_user_registration_path %></li>
-    <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
-  </ul>
-<% else %>
-  <ul>
-    <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-    <li><%= link_to 'Sign In', new_user_session_path %></li>
-  </ul>
-<% end %>
+<%= render "layouts/nav" %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
