--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -19,9 +19,9 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
-  <div class="field">
+  <div class="field cant-see-me">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.number_field :user_id, value: current_user.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
