--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @goal.user_id %>
+  <%= @goal.user.username %>
 </p>
 
 <%= link_to 'Edit', edit_goal_path(@goal) %> |
