--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,6 +25,7 @@
           <li><%= link_to 'New Goal', new_goal_path %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
+          <li><%= image_tag(current_user.avatar.url(:navpic)) %></li>
         <% else %>
           <li><%= link_to "Sign In", new_user_session_path %> </li>
         <% end %>
