--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,8 +16,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav">
-        <li><%= link_to "Goals", root_path %> </li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Goals", root_path %></li>
+        <li><%= link_to "Profiles", profiles_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
