Comments working for Goals

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,21 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
+    <%= f.label :comment_entry, class: "sr-only" %><br>
+    <%= f.text_area :comment_entry, class: "form-control", placeholder: "comment", rows: 5 %>
   </div>
-  <div class="field">
-    <%= f.label :comment_entry %><br>
-    <%= f.text_area :comment_entry %>
-  </div>
-  <div class="field">
-    <%= f.label :goal_id %><br>
-    <%= f.number_field :goal_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+  <div class="field cant-see-me">
+    <%= f.number_field :goal_id, value: @goal.id %>
+    <%= f.number_field :user_id, value: current_user.id %>
+  </div><br />
+
   <div class="actions">
     <%= f.submit %>
   </div>
