--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,20 +3,22 @@
 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
+      <%=link_to root_path, class: "navbar-brand" do %>
+      <i class="glyphicon glyphicon-home"></i>
+      <%end%>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Accountable</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav">
-        <li><%= link_to "Goals", root_path %></li>
+        <li><%= link_to "My Page", mypage_path %></li>
         <li><%= link_to "Profiles", profiles_path %></li>
       </ul>
 
