Add details and bio panels to user info on mypage

--- a/app/views/profiles/feed.html.erb
+++ b/app/views/profiles/feed.html.erb
@@ -1,18 +1,37 @@
 <!-- - - - - - User personal and account info - - - - - -->
-
 <div class="panel panel-default">
   <div class="panel-body">
     <div class="row">
-      <div class="col-md-6">
-        <%= current_user.username %><br />
-        <%= image_tag(current_user.avatar.url(:small)) %><br />
-        <%= current_user.first_name %> <%= current_user.last_name %><br />
-        <%= current_user.location %>
+<!-- Left personal info panel -->
+      <div class="col-xs-2">
+        <%= image_tag(current_user.avatar.url(:small), class: "img-thumbnail") %>
       </div>
-      <div class="col-md-6">
-        <%= current_user.bio[0..750] %>...</P>
+<!-- Center personal info panel -->
+      <div class="col-xs-3">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Details</h3>
+          </div>
+          <div class="panel-body">
+            <%= current_user.username %><br />
+            <%= current_user.first_name %> <%= current_user.last_name %><br />
+            <%= current_user.location %>
+          </div>
+        </div>
       </div>
-    </div>
+<!-- Right personal info panel -->
+      <div class="col-xs-7">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Bio</h3>
+          </div>
+          <div class="panel-body">
+            <%= current_user.bio %>
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- Row -->
   </div>
 </div>
 
@@ -20,19 +39,18 @@
 
 <!-- Left Column -->
   <div class="col-md-6">
-<!-- - - - - - - - - - - User Goals - - - - - - - - - -->
 
+<!-- - - - - - - - - - - User Goals - - - - - - - - - -->
     <div class="panel panel-default">
       <div class="panel-body">
-        <h5>My Current Goals <%= current_user.goals.count %></h5>
+        <h5>My <%= current_user.goals.count %> Current Goals</h5>
         <% @goals.each do |goal|%>
-        <%= goal.name %>
+        <%= goal.name %><br />
         <% end %>
       </div>
     </div>
 
 <!-- - - - - - - - - Completed Goals - - - - - - - - -->
-
     <div class="panel panel-default">
       <div class="panel-body">
         <h5>My Completed Goals</h5>
@@ -45,7 +63,6 @@
   <div class="col-md-6">
 
 <!-- - - - - - - - - - New Goals Form - - - - - - - - - -->
-
     <div class="panel panel-default">
       <div class="panel-body">
         <strong>New Goal</strong>
@@ -54,10 +71,11 @@
     </div>
 
 <!-- - - - - - - - - - - - Friends - - - - - - - - - - - -->
-
     <div class="panel panel-default">
       <div class="panel-body">
-        Friends
+        <h5>Friends</h5>
+        <%= current_user.relationships.count %> friends I follow.<br />
+        <%= current_user.inverse_relationships.count %> follow me.
       </div>
     </div>
 
