--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,38 +1,45 @@
 <p id="notice"><%= notice %></p>
 
-<h1>All Goals</h1>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h1>All User's Goals</h1>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @goals.each do |goal| %>
-    
-      <% if goal.completed? %>
-      <tr>
-        <td><%= goal.name %></td>
-        <td><%= goal.description %></td>
-        <td><%= goal.user.username %></td>
-        <!--<p>I DID IT at <%#time_ago_in_words(goal.completed_at) %></p>-->
-        <%else%>
+<% @goals.each do |goal| %>
+<% if goal.completed? %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title"><strike>Goal name: <%= goal.name %></strike> <%= goal.user.username %> has accomplished this goal!</h3>
+    </div>
+    <div class="panel-body">
         
-        <td><%= link_to 'Show', goal %></td>
-        <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
-        <td><%= link_to 'Mark as Complete', complete_goal_path(goal), method: :patch %></td>
-        <td><%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      <%end%>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Goal', new_goal_path %>
+      <%= goal.description %>
+      <% if current_user.id == goal.user.id %>
+        <%= link_to 'Edit', edit_goal_path(goal) %>
+        <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    </div>
+    <div class="panel-footer">
+      <%= goal.user.username %>’s <%= link_to 'goal', goal %>
+    </div>
+  </div>
+   <%else%> 
+    <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Goal name: <%= goal.name %></h3>
+    </div>
+    <div class="panel-body">
+      <%= goal.description %>
+      <% if current_user.id == goal.user.id %>
+         <%= link_to 'I DID IT!', complete_goal_path(goal), method: :patch %>
+        <%= link_to 'Edit', edit_goal_path(goal) %>
+        <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    </div>
+    <div class="panel-footer">
+      <%= goal.user.username %>’s <%= link_to 'goal', goal %>
+    </div>
+  </div>
+<% end %>
+<%end%>
