--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -12,7 +12,7 @@
       <h3 class="panel-title">Goal name: <%= goal.name %></h3>
     </div>
     <div class="panel-body">
-      <%= goal.description %>
+      <%= image_tag(goal.user.avatar.url(:navpic)) %> <%= goal.description %>
       <% if current_user.id == goal.user.id %>
         <%= link_to 'Edit', edit_goal_path(goal) %>
         <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
