--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -29,6 +29,9 @@
           <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
           <li><%= image_tag(current_user.avatar.url(:navpic)) %></li>
         <% else %>
+          <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#myModal">
+            test sign in
+          </button>
           <li><%= link_to "Sign In", new_user_session_path %> </li>
         <% end %>
       </ul>
@@ -36,3 +39,22 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Sign Up</h4>
+      </div>
+      <div class="modal-body">
+        <%= render "devise/registrations/modal" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
