--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,8 +18,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav">
-        <li><%= link_to "My Page", mypage_path %></li>
-        <li><%= link_to "Profiles", profiles_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "My Page", mypage_path %></li>
+          <li><%= link_to "Profiles", profiles_path %></li>
+        <% end %>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
