--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,4 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<h1>User Profiles</h1>
 
 <%= @user.first_name %> <%= @user.last_name %><br />
 <%= @user.username %><br />
