--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,12 @@
 
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
 .cant-see-me {
+  display: none
+}
+// *= require simple_calendar
+check_box {
   display: none
 }
