--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -29,10 +29,12 @@
           <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
           <li><%= image_tag(current_user.avatar.url(:navpic)) %></li>
         <% else %>
-          <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#myModal">
-            test sign in
+          <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#loginModal">
+            Login
           </button>
-          <li><%= link_to "Sign In", new_user_session_path %> </li>
+          <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signUpModal">
+            Sign Up
+          </button>
         <% end %>
       </ul>
 
@@ -40,8 +42,27 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<!-- LOGIN MODAL -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Login</h4>
+      </div>
+      <div class="modal-body">
+        <%= render "devise/registrations/modal2" %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+
+<!-- SIGN UP MODAL -->
+<div class="modal fade" id="signUpModal" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -53,7 +74,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
