fixed routing error for welcome page

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,7 @@
 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <%=link_to root_path, class: "navbar-brand" do %>
+      <%=link_to goals_path, class: "navbar-brand" do %>
       <i class="glyphicon glyphicon-home"></i>
       <%end%>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
