--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,6 @@
-<div class="jumbotron">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Hello, world!</h1>
-      <p>Whatever We want to say</p>
-    </div>
+<div class="row">
+  <div class="col-sm-12">
+    <h1>Our Landing page</h1>
+    <p>Whatever We want to say</p>
   </div>
 </div>
