--- a/app/views/goals/_leaders.html.erb
+++ b/app/views/goals/_leaders.html.erb
@@ -1,14 +1,21 @@
+<% @goals.each do |goal| %>
+<% goal.user.id %>
+<%end%>
+<%# @users.goals.count %>
+<%= @goals.count %>
+<%= @goals.count(:completed_at, :user_id) %>
+<%= @goals.count(:completed_at) - @goals.count(:user_id) %>
+<%# @users.goals.sum(:completed_at) %>
 
-
-<%= @goals.count %> 
-<%# @users.goals.count(completed_at)%> 
-
-
-
-  
-
-
-
-
-    
-
+<table>
+  <tr>
+    <th>User</th>
+    <th>Points</th>
+  </tr>
+    <% @users.sort_by{|x| x.goals.count(:completed_at) }.reverse.each do |x| %>
+      <tr>
+        <td><%= x.username %></td>
+        <td><%= x.goals.count(:completed_at) %></td>
+      </tr>
+    <% end %>
+</table>
