Add will_paginate to Goals index and my current goals on profile feed page

--- a/app/views/profiles/feed.html.erb
+++ b/app/views/profiles/feed.html.erb
@@ -54,7 +54,7 @@
       <%= check_box_tag :done %>
       <% end %>
       <% end %>
-
+      <%= will_paginate @goals %>
       </div>
     </div>
 
@@ -89,4 +89,3 @@
 
   </div> <!-- Right Column End -->
 </div>
-
