Add user. Add top margin to navpic so it's more centered vertically

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -29,7 +29,7 @@
           <li><%= link_to 'New Goal', new_goal_path %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
-          <li><%= image_tag(current_user.avatar.url(:navpic)) %></li>
+          <li><%= image_tag(current_user.avatar.url(:navpic), class: "navimg") %></li>
         <% else %>
           <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#loginModal">
             Login
