Conflict resolution after merge. Had to reinsert pagination for current goals

--- a/app/views/profiles/feed.html.erb
+++ b/app/views/profiles/feed.html.erb
@@ -58,9 +58,8 @@
       <%= check_box_tag :done %>
       <% end %>
       <% end %>
-
+      <% end %>
       <%= will_paginate @goals %>
-
       </div>
     </div>
 
