--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,6 @@
 <h1>User Profiles</h1>
 
+<%= image_tag(current_user.avatar.url(:small), class: "img-thumbnail") %>
 <%= @user.first_name %> <%= @user.last_name %><br />
 <%= @user.username %><br />
 
@@ -27,4 +28,3 @@ Joined in <%= @user.created_at.strftime("%B %Y") %>
 <%= goal.description %><br />
 <hr />
 <% end %>
-
