Bring in Bootstrap for pagination

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -46,7 +46,7 @@
       </div>
     <% end %>
     <%end%>
-    <%= will_paginate @goals %>
+    <%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
   </div>
 
 <!-- Right Column -->
