Add bootstrap to pagination on profile feed

--- a/app/views/profiles/feed.html.erb
+++ b/app/views/profiles/feed.html.erb
@@ -58,7 +58,7 @@
       <% end %>
       <% end %>
       <% end %>
-      <%= will_paginate @goals %>
+      <%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
       </div>
     </div>
 
