--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,20 @@
-<div class="row">
-  <div class="col-sm-12">
-    <h1>Our Landing page</h1>
-    <p>Whatever We want to say</p>
+<div class="hero"></div>
+<div class="overlay"></div>
+<div class="row text-center padtop100">
+  <div class="col-sm-12 hero-text">
+    <h1>Accountability Slogan thing</h1>
+    <p class="lead">Whatever We want to say</p>
+  </div>
+</div>
+
+<div class="row ">
+  <div class="col-sm-4">
+    <h2>hello</h2>
+  </div>
+  <div class="col-sm-4">
+    <h2>hello</h2>
+  </div>
+  <div class="col-sm-4">
+    <h2>hello</h2>
   </div>
 </div>
