--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,6 @@
 <h1>User Profiles</h1>
 
-<%= image_tag(current_user.avatar.url(:small), class: "img-thumbnail") %>
+<%= image_tag(@user.avatar.url(:small), class: "img-thumbnail") %>
 <%= @user.first_name %> <%= @user.last_name %><br />
 <%= @user.username %><br />
 
@@ -13,7 +13,7 @@ Joined in <%= @user.created_at.strftime("%B %Y") %>
 
 <% if current_user.id != @user.id %>
   <% if current_user.friends.include?(@user) %>
-    <%= link_to "Following", relationship_path(current_user.relationships.find_by_friend_id(@user)), :method => :delete, class: "btn btn-primary", id:"unfollow_btn" %>
+    <%= link_to "Following", relationship_path(current_user.relationships.find_by_friend_id(@user)), :method => :delete, class: "btn btn-primary btn-xs", id:"unfollow_btn" %>
   <% else %>
     <%= link_to "Follow", relationships_path(:friend_id => @user), method: :post, class: "btn btn_success" %>
   <% end %>
