--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @goal %> |
-<%= link_to 'Back', goals_path %>
+<%= link_to 'Show', @goal, class: "btn btn-primary btn-sm" %> |
+<%= link_to 'Back', goals_path , class: "btn btn-primary btn-sm"%>
