--- a/app/views/profiles/feed.html.erb
+++ b/app/views/profiles/feed.html.erb
@@ -69,7 +69,7 @@
       <br />
       <%= goal.name %><br />
       <%=goal.completed_at.strftime("%D") %>
-      <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'Delete', goal, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
 
       <% end %>
       <% end %>
