--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -19,12 +19,12 @@
 
           <%= image_tag(goal.user.avatar.url(:navpic)) %> <%= goal.description %>
           <% if current_user.id == goal.user.id %>
-            <%= link_to 'Edit', edit_goal_path(goal) %>
-            <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Edit', edit_goal_path(goal), class: "btn btn-primary btn-sm" %>
+            <%= link_to 'Delete', goal, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm" %>
           <% end %>
         </div>
         <div class="panel-footer">
-          <%= goal.user.username %>’s <%= link_to 'goal', goal %>
+          <%= goal.user.username %>’s <%= link_to 'goal', goal, class: "btn btn-primary btn-xs" %>
         </div>
       </div>
        <%else%>
@@ -35,13 +35,13 @@
         <div class="panel-body">
           <%= image_tag(goal.user.avatar.url(:navpic)) %> <%= goal.description %>
           <% if current_user.id == goal.user.id %>
-             <%= link_to 'I DID IT!', complete_goal_path(goal), method: :patch %>
-            <%= link_to 'Edit', edit_goal_path(goal) %>
-            <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'I DID IT!', complete_goal_path(goal), method: :patch , class: "btn btn-primary btn-sm"%>
+            <%= link_to 'Edit', edit_goal_path(goal), class: "btn btn-primary btn-sm" %>
+            <%= link_to 'Delete', goal, method: :delete, data: { confirm: 'Are you sure?' } , class: "btn btn-danger btn-sm"%>
           <% end %>
         </div>
         <div class="panel-footer">
-          <%= goal.user.username %>’s <%= link_to 'goal', goal %>
+          <%= goal.user.username %>’s <%= link_to 'goal', goal , class: "btn btn-primary btn-sm"%>
         </div>
       </div>
     <% end %>
