--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -90,7 +90,7 @@
             <br />
             <%= goal.name %><br />
             <%=goal.completed_at.strftime("%D") %>
-            <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'Delete', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
             <hr />
             <% end %>
           <% end %>
